# prevent-poetry-downgrade

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  prevent_poetry_downgrade.py  pyproject.toml
