[tool.poetry]
name = "no-poetry-downgrade"
version = "0.1.0"
description = ""
authors = ["ScDor <18174994+ScDor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
gitpython = "^3.1.43"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
